unpackaged/main/default/objects/Account/fields/Acepto_aviso_de_privacidad__c.field-meta.xml
<CustomField>
    <fullName>Acepto_aviso_de_privacidad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acepto aviso de privacidad</label>
    <type>Checkbox</type>
</CustomField>