unpackaged/main/default/objects/Account/fields/Afluencia_Virtual__c.field-meta.xml
<CustomField>
    <fullName>Afluencia_Virtual__c</fullName>
    <label>Afluencia Virtual</label>
    <type>DateTime</type>
</CustomField>