unpackaged/main/default/objects/Account/fields/anios__c.field-meta.xml
<CustomField>
    <fullName>anios__c</fullName>
    <inlineHelpText>Número</inlineHelpText>
    <label>Años</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>