unpackaged/main/default/objects/Account/fields/Antiguedad__c.field-meta.xml
<CustomField>
    <fullName>Antiguedad__c</fullName>
    <formula>Vivienda_Mas_Reciente__r.Antiguedad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Antigüedad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>