unpackaged/main/default/objects/Account/fields/Apellidomaterno_cta__c.field-meta.xml
<CustomField>
    <fullName>Apellidomaterno_cta__c</fullName>
    <label>Apellido Materno</label>
    <length>40</length>
    <type>Text</type>
</CustomField>