unpackaged/main/default/objects/Account/fields/Apellidopaterno_cta__c.field-meta.xml
<CustomField>
    <fullName>Apellidopaterno_cta__c</fullName>
    <label>Apellido Paterno</label>
    <length>40</length>
    <type>Text</type>
</CustomField>