unpackaged/main/default/objects/Account/fields/Aprobalguard__c.field-meta.xml
<CustomField>
    <fullName>Aprobalguard__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Al estar seleccionado y modificar el tipo de crédito envía en automático el proceso de aprobación</inlineHelpText>
    <label>Aprobación al Guardar</label>
    <type>Checkbox</type>
</CustomField>