unpackaged/main/default/objects/Account/fields/Aprobcontact__c.field-meta.xml
<CustomField>
    <fullName>Aprobcontact__c</fullName>
    <label>Aprobación de Contacto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En Proceso</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>