unpackaged/main/default/objects/Account/fields/Aprobo_Check_Apellido__c.field-meta.xml
<CustomField>
    <fullName>Aprobo_Check_Apellido__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprobo Check Apellido</label>
    <type>Checkbox</type>
</CustomField>