unpackaged/main/default/objects/Account/fields/Asesor__c.field-meta.xml
<CustomField>
    <fullName>Asesor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asesor</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR 3</booleanFilter>
        <errorMessage>El usuario seleccionado no tiene asignado el fraccionamiento elegido.</errorMessage>
        <filterItems>
            <field>User.ProfileId</field>
            <operation>equals</operation>
            <value>00e23000000anFuAAI</value>
        </filterItems>
        <filterItems>
            <field>User.FraccionamientoAutorizados__c</field>
            <operation>contains</operation>
            <valueField>$Source.Nombre_Fraccionamiento__c</valueField>
        </filterItems>
        <filterItems>
            <field>User.ProfileId</field>
            <operation>equals</operation>
            <value>00e23000000anG0AAI</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>