unpackaged/main/default/objects/Account/fields/Asesor_Primera_Parte_Formula__c.field-meta.xml
<CustomField>
    <fullName>Asesor_Primera_Parte_Formula__c</fullName>
    <formula>( ( NOW() - Fecha_Hora_Asignacion_Asesor__c ) * 24 * 60 * 60 ) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asesor Primera Parte Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>