unpackaged/main/default/objects/Account/fields/Asesor_Vencido__c.field-meta.xml
<CustomField>
    <fullName>Asesor_Vencido__c</fullName>
    <formula>Dias_Vencimiento_Asesor__c &gt; $CustomMetadata.Vencimiento_Asignacion__mdt.Asesor.Dias__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asesor Vencido</label>
    <type>Checkbox</type>
</CustomField>