unpackaged/main/default/objects/Account/fields/Asesores__c.field-meta.xml
<CustomField>
    <fullName>Asesores__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asesores</label>
    <referenceTo>Asesores__c</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>