unpackaged/main/default/objects/Account/fields/Aviso_de_Privadidad_Relacionado2__c.field-meta.xml
<CustomField>
    <fullName>Aviso_de_Privadidad_Relacionado2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aviso de Privadidad Relacionado</label>
    <referenceTo>Privacy_Notice__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>