unpackaged/main/default/objects/Account/fields/Aviso_de_Privadidad_Relacionado__c.field-meta.xml
<CustomField>
    <fullName>Aviso_de_Privadidad_Relacionado__c</fullName>
    <label>Aviso de Privadidad Relacionado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>