unpackaged/main/default/objects/Account/fields/Baja_Incubadora__c.field-meta.xml
<CustomField>
    <fullName>Baja_Incubadora__c</fullName>
    <label>Baja / Incubadora</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baja</fullName>
            </value>
            <value>
                <fullName>Incubadora</fullName>
            </value>
            <value>
                <fullName>Reactivación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>