unpackaged/main/default/objects/Account/fields/BillingColony__c.field-meta.xml
<CustomField>
    <fullName>BillingColony__c</fullName>
    <label>BillingColony</label>
    <length>60</length>
    <type>Text</type>
</CustomField>