unpackaged/main/default/objects/Account/fields/Campo_due_o_anterior_2__c.field-meta.xml
<CustomField>
    <fullName>Campo_due_o_anterior_2__c</fullName>
    <label>Campo dueño anterior 2</label>
    <type>Email</type>
</CustomField>