unpackaged/main/default/objects/Account/fields/Canal_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Canal_de_Venta__c</fullName>
    <label>Canal de Venta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Canal_de_Venta</valueSetName>
    </valueSet>
</CustomField>