unpackaged/main/default/objects/Account/fields/CanalVenta__c.field-meta.xml
<CustomField>
    <fullName>CanalVenta__c</fullName>
    <label>Canal de Venta1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AccountSource</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Prospección</fullName>
                <default>true</default>
                <label>Prospección</label>
            </value>
            <value>
                <fullName>Llamada Call Center</fullName>
            </value>
            <value>
                <fullName>Medio Publicitario</fullName>
            </value>
            <value>
                <fullName>Medios Digitales</fullName>
            </value>
            <value>
                <fullName>Programas Institucionales</fullName>
            </value>
            <value>
                <fullName>Referidos</fullName>
            </value>
            <value>
                <fullName>Prospecto Asesor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>