unpackaged/main/default/objects/Account/fields/Capacidad_de_compra__c.field-meta.xml
<CustomField>
    <fullName>Capacidad_de_compra__c</fullName>
    <label>Capacidad de compra</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>