unpackaged/main/default/objects/Account/fields/Capcom_cta__c.field-meta.xml
<CustomField>
    <fullName>Capcom_cta__c</fullName>
    <label>Capacidad de compra</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>