unpackaged/main/default/objects/Account/fields/Capcomp_cta__c.field-meta.xml
<CustomField>
    <fullName>Capcomp_cta__c</fullName>
    <formula>Capcom_cta__c + Saldsub_cta__c +  Monaho_cta__c  +Montgast_cta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CapacidadCompra__c + SaldoSubCuenta__c + Monto Ahorro voluntario + MontoGastoTitulacionOperaci</inlineHelpText>
    <label>Capacidad de compra total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>