unpackaged/main/default/objects/Account/fields/Check_Apellido__c.field-meta.xml
<CustomField>
    <fullName>Check_Apellido__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Apellido</label>
    <type>Checkbox</type>
</CustomField>