unpackaged/main/default/objects/Account/fields/Colab_Javer_Primera_Parte_Formula__c.field-meta.xml
<CustomField>
    <fullName>Colab_Javer_Primera_Parte_Formula__c</fullName>
    <formula>( ( NOW() - Fecha_Hora_Colaborador_Javer__c ) * 24 * 60 * 60 ) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Colab Javer Primera Parte Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>