unpackaged/main/default/objects/Account/fields/Colaborador_Javer__c.field-meta.xml
<CustomField>
    <fullName>Colaborador_Javer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Colaborador Javer</label>
    <referenceTo>Colaborador_Javer__c</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>