unpackaged/main/default/objects/Account/fields/Colaborador_Javer_Anterior__c.field-meta.xml
<CustomField>
    <fullName>Colaborador_Javer_Anterior__c</fullName>
    <label>Colaborador Javer Anterior</label>
    <length>255</length>
    <type>Text</type>
</CustomField>