unpackaged/main/default/objects/Account/fields/Colaborador_Javer_Asignacion_Prorroga__c.field-meta.xml
<CustomField>
    <fullName>Colaborador_Javer_Asignacion_Prorroga__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Colaborador Javer Asignación Prórroga</label>
    <type>Checkbox</type>
</CustomField>