unpackaged/main/default/objects/Account/fields/Colaborador_Javer_Asignado__c.field-meta.xml
<CustomField>
    <fullName>Colaborador_Javer_Asignado__c</fullName>
    <label>Colaborador Javer Asignado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>