unpackaged/main/default/objects/Account/fields/Colaborador_Javer_Vencido__c.field-meta.xml
<CustomField>
    <fullName>Colaborador_Javer_Vencido__c</fullName>
    <formula>IF(Colaborador_Javer_Asignacion_Prorroga__c = true,
Dias_Vencimiento_Colaborador_Javer__c &gt; $CustomMetadata.Vencimiento_Asignacion__mdt.Colaborador_Javer_Prorroga.Dias__c,
Dias_Vencimiento_Colaborador_Javer__c &gt; $CustomMetadata.Vencimiento_Asignacion__mdt.Colaborador_Javer.Dias__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Colaborador Javer Vencido</label>
    <type>Checkbox</type>
</CustomField>