unpackaged/main/default/objects/Account/fields/Colonia_cta__c.field-meta.xml
<CustomField>
    <fullName>Colonia_cta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Colonia</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Colonia__c.Municipio__c</field>
            <operation>equals</operation>
            <valueField>$Source.Municipiocta__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Colonia__c</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>