unpackaged/main/default/objects/Account/fields/Contador_Auto_Desasignacion__c.field-meta.xml
<CustomField>
    <fullName>Contador_Auto_Desasignacion__c</fullName>
    <label>Contador Auto Desasignación</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>