unpackaged/main/default/objects/Account/fields/CorreAlterno__c.field-meta.xml
<CustomField>
    <fullName>CorreAlterno__c</fullName>
    <inlineHelpText>correos electrónicos separados por ;</inlineHelpText>
    <label>Correo electrónico alterno</label>
    <length>255</length>
    <type>Text</type>
</CustomField>