unpackaged/main/default/objects/Account/fields/Correlect_cta__c.field-meta.xml
<CustomField>
    <fullName>Correlect_cta__c</fullName>
    <label>Correo Electrónico(1)</label>
    <type>Email</type>
</CustomField>