unpackaged/main/default/objects/Account/fields/Correo_Admin_de_Owner__c.field-meta.xml
<CustomField>
    <fullName>Correo_Admin_de_Owner__c</fullName>
    <label>Correo Admin de Owner</label>
    <type>Email</type>
</CustomField>