unpackaged/main/default/objects/Account/fields/Correo_Delegado_de_Owner__c.field-meta.xml
<CustomField>
    <fullName>Correo_Delegado_de_Owner__c</fullName>
    <label>Correo Delegado de Owner</label>
    <type>Email</type>
</CustomField>