unpackaged/main/default/objects/Account/fields/Correodueante__c.field-meta.xml
<CustomField>
    <fullName>Correodueante__c</fullName>
    <label>Correo dueño anterior</label>
    <type>Email</type>
</CustomField>