unpackaged/main/default/objects/Account/fields/Correoduenact__c.field-meta.xml
<CustomField>
    <fullName>Correoduenact__c</fullName>
    <label>Correo dueño actual</label>
    <type>Email</type>
</CustomField>