unpackaged/main/default/objects/Account/fields/Correoduenant__c.field-meta.xml
<CustomField>
    <fullName>Correoduenant__c</fullName>
    <description>Sirve al WF de dueño anterior</description>
    <label>Correo dueño anterior</label>
    <type>Email</type>
</CustomField>