unpackaged/main/default/objects/Account/fields/cuentaNueva__c.field-meta.xml
<CustomField>
    <fullName>cuentaNueva__c</fullName>
    <defaultValue>true</defaultValue>
    <label>cuentaNueva</label>
    <type>Checkbox</type>
</CustomField>