unpackaged/main/default/objects/Account/fields/DependientesEconomicos__c.field-meta.xml
<CustomField>
    <fullName>DependientesEconomicos__c</fullName>
    <inlineHelpText>Número</inlineHelpText>
    <label>Dependientes económicos</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>