unpackaged/main/default/objects/Account/fields/Desasignacion_Auto_Asesor__c.field-meta.xml
<CustomField>
    <fullName>Desasignacion_Auto_Asesor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Desasignación Auto Asesor</label>
    <type>Checkbox</type>
</CustomField>