unpackaged/main/default/objects/Account/fields/Desasignacion_Auto_Colaborador_Javer__c.field-meta.xml
<CustomField>
    <fullName>Desasignacion_Auto_Colaborador_Javer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Desasignación Auto Colaborador Javer</label>
    <type>Checkbox</type>
</CustomField>