unpackaged/main/default/objects/Account/fields/Desasignacion_Auto_Lead_Profiler__c.field-meta.xml
<CustomField>
    <fullName>Desasignacion_Auto_Lead_Profiler__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Desasignación Auto Lead Profiler</label>
    <type>Checkbox</type>
</CustomField>