unpackaged/main/default/objects/Account/fields/Dias_Colaborador_Javer__c.field-meta.xml
<CustomField>
    <fullName>Dias_Colaborador_Javer__c</fullName>
    <formula>TODAY() -  Fecha_Colaborador_Javer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias Colaborador Javer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>