unpackaged/main/default/objects/Account/fields/Dias_fecha_nacimiento__c.field-meta.xml
<CustomField>
    <fullName>Dias_fecha_nacimiento__c</fullName>
    <formula>IF( NOT( ISBLANK( FechaNacimiento__c ) ) ,
  IF( DATE( 2000 , MONTH( FechaNacimiento__c ) , DAY( FechaNacimiento__c ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
     YEAR (Today()) - YEAR ( FechaNacimiento__c ),
     YEAR (Today()) - YEAR ( FechaNacimiento__c ) -1 ),
  null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>años fecha nacimiento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>