unpackaged/main/default/objects/Account/fields/Dias_Vencimiento_Asesor__c.field-meta.xml
<CustomField>
    <fullName>Dias_Vencimiento_Asesor__c</fullName>
    <formula>TODAY() - Fecha_Asignacion_Asesor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días Vencimiento Asesor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>