unpackaged/main/default/objects/Account/fields/Dias_Vencimiento_LP__c.field-meta.xml
<CustomField>
    <fullName>Dias_Vencimiento_LP__c</fullName>
    <formula>TODAY() -  Fecha_LP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días Vencimiento LP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>