unpackaged/main/default/objects/Account/fields/Dias_Vencimiento_Prospectador__c.field-meta.xml
<CustomField>
    <fullName>Dias_Vencimiento_Prospectador__c</fullName>
    <formula>if ( !ISBLANK(Fecha_Prospeccion__c),
    TODAY() - Fecha_Prospeccion__c,
			null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días Vencimiento Prospectador</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>