unpackaged/main/default/objects/Account/fields/Difdiastoday__c.field-meta.xml
<CustomField>
    <fullName>Difdiastoday__c</fullName>
    <formula>Fechprec_cta__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dif dias today vs fecha pre</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>