unpackaged/main/default/objects/Account/fields/Edad__c.field-meta.xml
<CustomField>
    <fullName>Edad__c</fullName>
    <formula>IF(ISNULL(FechaNacimiento__c), null, 
			FLOOR((TODAY()-FechaNacimiento__c +1)/365.2425))</formula>
    <label>Edad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>