unpackaged/main/default/objects/Account/fields/Email_Colaborador_Javer__c.field-meta.xml
<CustomField>
    <fullName>Email_Colaborador_Javer__c</fullName>
    <label>Email Colaborador Javer</label>
    <type>Email</type>
</CustomField>