unpackaged/main/default/objects/Account/fields/Empresa__c.field-meta.xml
<CustomField>
    <fullName>Empresa__c</fullName>
    <label>Empresa</label>
    <length>80</length>
    <type>Text</type>
</CustomField>