unpackaged/main/default/objects/Account/fields/Entrega__c.field-meta.xml
<CustomField>
    <fullName>Entrega__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entrega</label>
    <referenceTo>Entrega__c</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>