unpackaged/main/default/objects/Account/fields/Escolaridad__c.field-meta.xml
<CustomField>
    <fullName>Escolaridad__c</fullName>
    <label>Escolaridad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primaria</fullName>
            </value>
            <value>
                <fullName>Secundaria</fullName>
            </value>
            <value>
                <fullName>Preparatoria</fullName>
            </value>
            <value>
                <fullName>Bachillerato/Técnica</fullName>
            </value>
            <value>
                <fullName>Profesionista/Licenciatura</fullName>
            </value>
            <value>
                <fullName>Postgrado/Maestría</fullName>
            </value>
            <value>
                <fullName>Doctorado</fullName>
            </value>
            <value>
                <fullName>Sin Estudios</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>