unpackaged/main/default/objects/Account/fields/Estado_cta__c.field-meta.xml
<CustomField>
    <fullName>Estado_cta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estado</label>
    <referenceTo>Estado__c</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>