unpackaged/main/default/objects/Account/fields/Estadofracc_cta__c.field-meta.xml
<CustomField>
    <fullName>Estadofracc_cta__c</fullName>
    <label>Estado Fraccionamiento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aguascalientes</fullName>
            </value>
            <value>
                <fullName>Ciudad de México</fullName>
            </value>
            <value>
                <fullName>Estado de México</fullName>
            </value>
            <value>
                <fullName>Jalisco</fullName>
            </value>
            <value>
                <fullName>Nuevo León</fullName>
            </value>
            <value>
                <fullName>Querétaro</fullName>
            </value>
            <value>
                <fullName>Quintana Roo</fullName>
            </value>
            <value>
                <fullName>Tamaulipas</fullName>
            </value>
            <value>
                <fullName>NU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>