unpackaged/main/default/objects/Account/fields/Estatus__c.field-meta.xml
<CustomField>
    <fullName>Estatus__c</fullName>
    <description>Campos informativo, viaja a través de la interfaz, si es una cuenta nueva por default “Por Asignar”</description>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Por Asignar</fullName>
            </value>
            <value>
                <fullName>Asignado</fullName>
            </value>
            <value>
                <fullName>Por Reasignar</fullName>
            </value>
            <value>
                <fullName>Baja</fullName>
            </value>
            <value>
                <fullName>Incubadora</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>