unpackaged/main/default/objects/Account/fields/Estatus_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Cliente__c</fullName>
    <label>Estatus Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POR ASIGNAR</fullName>
                <default>true</default>
                <label>POR ASIGNAR</label>
            </value>
            <value>
                <fullName>ASIGNADO</fullName>
            </value>
            <value>
                <fullName>POR REASIGNAR</fullName>
            </value>
            <value>
                <fullName>BAJA</fullName>
            </value>
            <value>
                <fullName>INCUBADORA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>