unpackaged/main/default/objects/Account/fields/Estatus_Cliente_Anterior__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Cliente_Anterior__c</fullName>
    <label>Estatus_Cliente_Anterior</label>
    <length>20</length>
    <type>Text</type>
</CustomField>