unpackaged/main/default/objects/Account/fields/Estatus_Integracion__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Integracion__c</fullName>
    <label>Estatus Integración</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completada</fullName>
            </value>
            <value>
                <fullName>Incidencia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>