unpackaged/main/default/objects/Account/fields/Estatus_Lista_Negra_QEQ__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Lista_Negra_QEQ__c</fullName>
    <label>Estatus Lista Negra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIN VALIDAR</fullName>
                <default>true</default>
                <label>SIN VALIDAR</label>
            </value>
            <value>
                <fullName>LISTA NEGRA</fullName>
            </value>
            <value>
                <fullName>LN CONFIRMADO</fullName>
            </value>
            <value>
                <fullName>VALIDADO</fullName>
            </value>
            <value>
                <fullName>PPE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>