unpackaged/main/default/objects/Account/fields/Estatus_LP__c.field-meta.xml
<CustomField>
    <fullName>Estatus_LP__c</fullName>
    <label>Estatus LP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASIGNADO</fullName>
            </value>
            <value>
                <fullName>NO ASIGNADO</fullName>
            </value>
            <value>
                <fullName>POR ASIGNAR</fullName>
            </value>
            <value>
                <fullName>REASIGNADO</fullName>
            </value>
            <value>
                <fullName>POR REASIGNAR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>