unpackaged/main/default/objects/Account/fields/EstatusProceso__c.field-meta.xml
<CustomField>
    <fullName>EstatusProceso__c</fullName>
    <label>Estatus de Proceso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>