unpackaged/main/default/objects/Account/fields/Etapa__c.field-meta.xml
<CustomField>
    <fullName>Etapa__c</fullName>
    <formula>IF(OR(RecordType.DeveloperName = &#39;Prospecto_Persona_Moral&#39;,RecordType.DeveloperName = &#39;Prospecto_Persona_Fisica&#39;),&#39;PROSPECCION&#39;,
 IF(OR(RecordType.DeveloperName = &#39;Afluente_Persona_Moral&#39;,RecordType.DeveloperName = &#39;Afluente_Persona_Fisica&#39;), &#39;AFLUENCIA&#39;,
  IF(OR(RecordType.DeveloperName = &#39;Cliente_Persona_Moral&#39;,RecordType.DeveloperName = &#39;Cliente_Persona_Fisica&#39;), &#39;CLIENTE&#39;, &#39;&#39;)
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Etapa</label>
    <type>Text</type>
</CustomField>