unpackaged/main/default/objects/Account/fields/Etapa_Seguimiento__c.field-meta.xml
<CustomField>
    <fullName>Etapa_Seguimiento__c</fullName>
    <label>Etapa de Seguimiento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Etapa_Seguimiento</valueSetName>
    </valueSet>
</CustomField>