unpackaged/main/default/objects/Account/fields/Extension_Vencimiento_Asesor__c.field-meta.xml
<CustomField>
    <fullName>Extension_Vencimiento_Asesor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extensión Vencimiento Asesor</label>
    <type>Checkbox</type>
</CustomField>