unpackaged/main/default/objects/Account/fields/Fecha_a_Contactar__c.field-meta.xml
<CustomField>
    <fullName>Fecha_a_Contactar__c</fullName>
    <label>Fecha a Contactar</label>
    <type>Date</type>
</CustomField>