unpackaged/main/default/objects/Account/fields/Fecha_Asignacion_Asesor_Formula__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Asignacion_Asesor_Formula__c</fullName>
    <formula>IF( ISBLANK(Fecha_Asignacion_Asesor__c) , NULL , IF( LEN(TEXT(DAY(Fecha_Asignacion_Asesor__c))) &gt; 1 , TEXT(DAY(Fecha_Asignacion_Asesor__c)), &quot;0&quot; + TEXT(DAY(Fecha_Asignacion_Asesor__c))) + &quot;/&quot; + IF(LEN(TEXT(MONTH(Fecha_Asignacion_Asesor__c))) &gt; 1 , TEXT(MONTH(Fecha_Asignacion_Asesor__c)), &quot;0&quot; + TEXT(MONTH(Fecha_Asignacion_Asesor__c))) + &quot;/&quot; + TEXT(YEAR(Fecha_Asignacion_Asesor__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha_Asignacion_Asesor Formula</label>
    <type>Text</type>
</CustomField>