unpackaged/main/default/objects/Account/fields/Fecha_Captura__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Captura__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Fecha de Captura</label>
    <type>Date</type>
</CustomField>